<resources>
    <string name="app_name">Never Late</string>
    <string name="notification_channel_name">Never late</string>
    <string name="notification_channel_description">Notifications for entering or leaving geofences created by Never Late</string>
    <string name="permissions_explanation_text">In order for Never Late to properly work access to your location and to calendar events is needed. Please grant the required permissions</string>
    <string name="ok">OK</string>
    <string name="geofence_added_success">Geofences were successfully updated, notifications will be sent when it is time to leave</string>
    <string name="geofence_added_partial_success">Geofences were successfully updated, notifications will be sent when it is time to leave, some geofences failed to load, will try those again on the next scheduled update</string>
    <string name="geofence_added_failed">failed to load the geofences, will try again on the next scheduled update</string>
    <string name="exiting_geofence_notification_content_with_time">In order to make it in time for your event you need to start driving in %1$s minutes to %2$s, Estimated time to arrival is %3$s</string>
    <string name="exiting_geofence_notification_content">In order to make it in time for your event you need to start driving in %1$s minutes to %2$s.</string>
    <string name="exiting_geofence_notification_title">Time to leave to scheduled event - </string>
    <string name="driving_notification_title_missed">Missed Event </string>
    <string name="driving_notification_content_missed_end">Oops looks like you left the drivable distance to your event. Maybe if you drive fast you can still make it :) </string>
    <string name="driving_notification_content_missed_start">Oops looks like you left the drivable distance to your event. You still have time before the event ends.</string>
    <string name="driving_nofication_time_to_go_title">Time to leave </string>
    <string name="driving_nofication_time_to_go_content">Its time to get driving if you want to make your event. Tap here to launch maps.</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="title_activity_maps">Map</string>
    <string name="entering_geofence_notification_title">Entering drivable distance to - </string>
    <string name="entering_geofence_notification_content">Entering drivable distance to - </string>
    <string name="refresh_error_no_connection">Internet connection is required. Check your settings and try again</string>
    <string name="launch_data_settings_button">Settings</string>
    <string name="menu_item_refresh">Refresh</string>
    <string name="driving_foreground_notification_text">Never late is tracking your location while you drive. This is being done to make sure you will make your events on time. To cancel the tracking just click cancel.</string>
    <string name="driving_foreground_notification_title">Driving location tracking is active</string>
    <string name="no_events_error_image">No events error image</string>
    <string name="no_events_text">Whoops looks like you don\'t have any events with a location saved today. Events are updated every few minutes if you just added an event just refresh the list. If you would like to see events without locations please select so from the menu.</string>
    <string name="no_events_heading">No tracked events for today!</string>
    <string name="no_events_button">view events without location</string>
    <string name="passed_event_heading">Event Missed</string>
    <string name="passed_event_text">Seems like this event has already passed, make sure that notifications are active so you don\'t miss any other events.</string>
    <string name="menu_item_show_all">Show all Events</string>
    <string name="menu_item_show_loc_only">Show only tracked events</string>
    <string name="search">Search</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="event_detail_leave_time">Time to leave - %1$s</string>
    <string name="time_icon">Time icon</string>
    <string name="title_icon">Title icon</string>
    <string name="content_divider">Content divider</string>
    <string name="location_icon">Location icon</string>
    <string name="driving_time_icon">Driving time icon</string>
    <string name="km_signature">KM</string>
    <string name="miles_signature">MILES</string>
    <string name="am">AM</string>
    <string name="pm">PM</string>
    <string name="foreground_notification_cancel">Cancel tracking</string>
    <string name="event_not_found_toast_text">Unable to load event please try again</string>
    <string name="current_location_map_title">Your Location</string>
    <string name="leave_at_time">Time to leave - %1$s</string>
    <string name="widget_header">Your next event</string>
    <string name="version_mismatch_snackbar">You do not have the latest version. Please update the app to avoid any issues</string>
    <string name="version_mismatch_snackbar_update_button">Update</string>
    <string name="version_invalid">Invalid Version</string>
    <string name="undo_delete_snackbar">This event will no longer be tracked. Reactivate it in its detail screen by showing all events</string>
    <string name="undo_delete_snackbar_action_undo">Undo</string>
    <string name="undo_delete_snackbar_action_dismiss">Dismiss</string>
    <string name="admob_id">ca-app-pub-6961678341915263~3845118420</string>
    <string name="ad_mob_interstitial_ad_unit">ca-app-pub-6961678341915263/9541132389</string>
    <string name="unable_to_get_directions_data">Geofences were not updated, unable to get directions data. Check your internet connection and try to refresh again</string>
    <string name="prefs_calendars_title">Calendars</string>
    <string name="prefs_calendars_key" translatable="false">calendars</string>
    <string name="pref_units_title" translatable="false">Distance Units</string>
    <string name="pref_units_key" translatable="false">units</string>
    <string name="pref_units_metric" translatable="false">km</string>
    <string name="pref_units_imperial" translatable="false">miles</string>
    <string name="pref_units_label_metric">Kilometers</string>
    <string name="pref_units_label_imperial">Miles</string>
    <string name="prefs_speed_title">Default speed</string>
    <string name="prefs_speed_key" translatable="false">kpm</string>
    <string name="prefs_speed_very_slow_option">30 Kilometers per hour</string>
    <string name="prefs_speed_slow_option">40 Kilometers per hour</string>
    <string name="prefs_speed_medium_option">50 Kilometers per hour</string>
    <string name="prefs_speed_fast_option">60 Kilometers per hour</string>
    <string name="prefs_speed_very_fast_option">70 Kilometers per hour</string>
    <string name="prefs_speed_extremely_fast_option">100 kilometers per hour</string>
    <string name="prefs_speed_very_slow_value">0.5</string>
    <string name="prefs_speed_slow_value">0.666667</string>
    <string name="prefs_speed_medium_value">0.833333</string>
    <string name="prefs_speed_fast_value">1</string>
    <string name="prefs_speed_very_fast_value">1.166667</string>
    <string name="prefs_speed_extremely_fast_value">1.666</string>
    <string name="prefs_speed_very_slow_option_miles">15 miles per hour</string>
    <string name="prefs_speed_slow_option_miles">25 miles per hour</string>
    <string name="prefs_speed_medium_option_miles">35 miles per hour</string>
    <string name="prefs_speed_fast_option_miles">45 miles per hour</string>
    <string name="prefs_speed_very_fast_option_miles">55 miles per hour</string>
    <string name="prefs_speed_extremely_fast_option_miles">65 miles per hour</string>
    <string name="prefs_speed_very_slow_value_miles">0.4</string>
    <string name="prefs_speed_slow_value_miles">0.666667</string>
    <string name="prefs_speed_medium_value_miles">0.93333</string>
    <string name="prefs_speed_fast_value_miles">1.4</string>
    <string name="prefs_speed_very_fast_value_miles">1.47</string>
    <string name="prefs_speed_extremely_fast_value_miles">1.73</string>
    <string name="prefs_speed_default" translatable="false">@string/prefs_speed_slow_value</string>
    <string name="menu_settings">Settings</string>
    <string name="prefs_alerts_title">Alert time (minutes before)</string>
    <string name="prefs_alerts_key" translatable="false">alert-time</string>
    <string name="prefs_alerts_default"> 10 minutes</string>
    <string name="prefs_alerts_5_minutes_option">5 minutes prior</string>
    <string name="prefs_alerts_10_minutes_option">10 minutes prior</string>
    <string name="prefs_alerts_15_minutes_option">15 minutes prior</string>
    <string name="prefs_alerts_5_minutes_value">5</string>
    <string name="prefs_alerts_10_minutes_value">10</string>
    <string name="prefs_alerts_15_minutes_value">15</string>
    <string name="prefs_alert_title">Alert time</string>
    <string name="menu_privacy_policy">Privacy Policy</string>
    <string name="app_needs_update_graphic">App needs update graphic</string>
    <string name="needs_update_header">Version Not Supported</string>
    <string name="need_update_text">Your version is not up to date and is no longer supported. Please download the newest version from the Playstore (enabling automatic updates is extremely recommended</string>
    <string name="needs_update_button">Go to Play Store</string>
    <string name="no_calendar_heading">No Compatible Calendar</string>
    <string name="no_calendar_text">There is no compatible calendar found on your device. Never Late uses the calendar to find events that need to be tracked, please install the calendar app.</string>
    <string name="title_activity_onboarding">Onboarding</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="drawer_analyze_title">Conflict Analysis</string>
    <string name="drawer_subscription">Subscription Status</string>
    <string name="drawer_home">Home</string>
    <string name="maximum_time_by_event">Maximum time by event</string>
    <string name="analyze_leave_time_label">Time to leave to next event</string>
    <string name="subscription_heading">Subscription</string>
    <string name="subscription_main_body">In order to provide our users with the most relevant travel
        time data we use the Mapbox API to get driving time data. In order to uset this data a subscription is necessary as the costs
        can be quite high. if you would rather use more basic data you can, and no subscription is needed.
        Subscription will also unlock additional features as well.</string>
    <string name="subscription_initial_launch_notice">Subscription features are enabled for all users during initial launch</string>
    <string name="subscription_button">Subscribe</string>
    <string name="snooze_heading">Snooze App</string>
    <string name="snooze_main_text">If you feel like you do not need the app functionality at this time you can snooze it here until a specified time. When the app is snoozed you will not see any events in the list, and event analysis will not be available.
    \n\nNote: If you would like to retain the functionality but not receive notifications use the switch below.</string>
    <string name="snooze_set_button">Set Snooze</string>
    <string name="snoozed_until_label">Snoozed Until</string>
    <string name="edit_snooze_button">Edit Snooze</string>
    <string name="snooze_options_label">Only snooze Notifications</string>
    <string name="app_snoozed_heading">App is snoozed</string>
    <string name="app_snoozed_message_body">Snooze is activated and therefore no events are being tracked. To enable tracking turn off snooze.</string>
    <string name="app_snoozed_cancel_button">Go to Snooze Settings</string>
</resources>