<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:id="@+id/main_activity_menu">
        <item
            android:id="@+id/main_activity_menu_search"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/search"
            app:actionViewClass="android.support.v7.widget.SearchView"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/main_activity_menu_sync"
            android:icon="@drawable/ic_refresh_white_24dp"
            android:title="@string/menu_item_refresh"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/main_activity_menu_show_all"
            android:title="@string/menu_item_show_all"
            app:showAsAction="never" />
        <item
            android:id="@+id/main_activity_menu_show_location_only"
            android:title="@string/menu_item_show_loc_only"
            app:showAsAction="never" />
    </group>
    <group
        android:id="@+id/analyze_menu"
        android:visible="false">
        <item
            android:id="@+id/analyze_refresh"
            android:icon="@drawable/ic_refresh_white_24dp"
            android:title="@string/menu_item_refresh"
            app:showAsAction="ifRoom" />
    </group>
</menu>