<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.NeedUpdateActivity">
    <ImageView
        android:id="@+id/need_update_main_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/needs_update"
        android:contentDescription="@string/app_needs_update_graphic"/>

    <TextView
        android:id="@+id/need_update_header"
        style="@style/headline"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@id/need_update_main_image"
        android:layout_marginTop="@dimen/vertical_content_spacing_x_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/needs_update_header"/>

    <TextView
        android:id="@+id/need_update_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/material_layout_keylines_screen_edge_margin"
        android:paddingEnd="@dimen/material_layout_keylines_screen_edge_margin"
        android:textAlignment="center"
        android:textColor="#344B67"
        android:textSize="@dimen/material_component_lists_two_line_text_size"
        android:text="@string/need_update_text"
        app:layout_constraintTop_toBottomOf="@id/need_update_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/need_update_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_content_spacing_x_2"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/need_update_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/colorAccent"
        android:text="@string/needs_update_button"
        android:textColor="@android:color/white"/>

</android.support.constraint.ConstraintLayout>