<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FCFCFC">

    <ImageView
        android:id="@+id/app_snoozed_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/no_events_error_image"
        android:src="@drawable/snooze_screen_image"
        android:layout_marginTop="@dimen/vertical_content_spacing_x_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/app_snoozed_heading"
        style="@style/headline"
        android:text="@string/app_snoozed_heading"
        android:textColor="@android:color/black"
        android:layout_marginTop="@dimen/vertical_content_spacing_x_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_snoozed_image" />

    <TextView
        android:id="@+id/app_snoozed_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/material_layout_vertical_spacing_between_content_areas"
        android:lineSpacingExtra="2dp"
        android:paddingStart="@dimen/material_layout_keylines_screen_edge_margin"
        android:paddingEnd="@dimen/material_layout_keylines_screen_edge_margin"
        android:text="@string/app_snoozed_message_body"
        android:textAlignment="center"
        android:textColor="#344B67"
        android:textSize="@dimen/material_component_lists_two_line_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_snoozed_heading" />

    <Button
        android:id="@+id/app_snoozed_cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:background="@color/colorAccent"
        android:textColor="@android:color/white"
        android:text="@string/app_snoozed_cancel_button"
        android:layout_marginTop="@dimen/vertical_content_spacing_x_2"
        app:layout_constraintTop_toBottomOf="@id/app_snoozed_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</android.support.constraint.ConstraintLayout>