<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FCFCFC">

    <ImageView
        android:id="@+id/no_events_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/no_events_error_image"
        android:src="@drawable/no_calendar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/no_calendar_heading"
        style="@style/headline"
        android:layout_marginTop="@dimen/vertical_content_spacing_x_2"
        android:text="@string/no_calendar_heading"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/no_events_image" />

    <TextView
        android:id="@+id/no_events_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/material_layout_vertical_spacing_between_content_areas"
        android:lineSpacingExtra="2dp"
        android:paddingStart="@dimen/material_layout_keylines_screen_edge_margin"
        android:paddingEnd="@dimen/material_layout_keylines_screen_edge_margin"
        android:text="@string/no_calendar_text"
        android:textAlignment="center"
        android:textColor="#344B67"
        android:textSize="@dimen/material_component_lists_two_line_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/no_calendar_heading" />


</androidx.constraintlayout.widget.ConstraintLayout>